[project]
name = "ew"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cloud-volume>=12.10.0",
    "igneous-pipeline>=4.34.0",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "pyvista>=0.47.1",
    "trame>=3.12.0",
]
